[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/levels/TwoPathsLevel.gd" type="Script" id=1]
[ext_resource path="res://src/objects/LevelButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://resouces/TileSet.tres" type="TileSet" id=3]
[ext_resource path="res://resouces/WireTileSet.tres" type="TileSet" id=4]
[ext_resource path="res://src/objects/LevelEnd.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/objects/Gate.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
position = Vector2( 64, 64 )
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( -196597, 0, 0, -196596, 6, 0, -131060, 7, 0, -65525, 0, 0, -65523, 6, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 6, 0, 65546, 0, 0, 65547, 536870916, 0, 65548, 0, 0, 65549, 6, 0, 131082, 0, 0, 131083, 6, 0, 131084, 0, 0, 131085, 6, 0, 196618, 0, 0, 196619, 7, 0, 196620, 0, 0, 196621, 6, 0, 262150, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 6, 0, 327686, 536870918, 0, 327687, 536870918, 0, 327688, 536870918, 0, 327689, 536870918, 0, 327690, 536870919, 0, 327691, 2, 0, 327692, 3, 0, 393227, 536870918, 0 )

[node name="WireTileMap" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( -196601, 14, 0, -196600, 1073741829, 0, -196599, 1073741829, 0, -196598, 1073741829, 0, -196597, 1073741837, 0, -131065, 5, 0, -131063, 14, 0, -131062, 536870917, 0, -65529, 5, 0, -65527, 5, 0, 7, 5, 0, 9, 5, 0, 10, 536870926, 0, 11, 1073741829, 0, 12, 1610612750, 0, 65543, 5, 0, 65544, 536870926, 0, 65545, 1073741835, 0, 65546, 1610612750, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 536870919, 0, 196618, 1073741837, 0 )

[node name="LevelButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 224 )

[node name="LevelButton2" parent="." instance=ExtResource( 2 )]
position = Vector2( 288, 192 )

[node name="LevelButton3" parent="." instance=ExtResource( 2 )]
position = Vector2( 448, 144 )

[node name="LevelEnd" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, 160 )
maximum_weight = 1

[node name="Gate" parent="." instance=ExtResource( 6 )]
position = Vector2( 96, 184 )

[node name="Gate2" parent="." instance=ExtResource( 6 )]
position = Vector2( 128, 200 )

[node name="Gate3" parent="." instance=ExtResource( 6 )]
position = Vector2( 416, 152 )

[node name="Gate4" parent="." instance=ExtResource( 6 )]
position = Vector2( 416, 184 )
is_open = true

[connection signal="button_pressed" from="LevelButton" to="." method="_on_LevelButton_button_pressed"]
[connection signal="button_pressed" from="LevelButton2" to="." method="_on_LevelButton2_button_pressed"]
[connection signal="button_pressed" from="LevelButton3" to="." method="_on_LevelButton3_button_pressed"]
